--- a/iOS_201/iOS_201/Info.plist
+++ b/iOS_201/iOS_201/Info.plist
@@ -9,7 +9,7 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>ios-201</string>
+				<string>example</string>
 			</array>
 		</dict>
 	</array>
