--- a/iOS_201/Podfile
+++ b/iOS_201/Podfile
@@ -8,19 +8,20 @@ target 'iOS_201' do
   # Pods for iOS_201
   pod 'Alamofire'
   pod 'Kingfisher', '~> 7.0'
-  pod 'SnapKit'
-  
+  pod 'SnapKit', '~> 5.6.0'
+
   target 'iOS_201Tests' do
     inherit! :search_paths
     pod 'Alamofire'
     pod 'Kingfisher', '~> 7.0'
-    pod 'SnapKit'
+    pod 'SnapKit', '~> 5.6.0'
   end
 
   target 'iOS_201UITests' do
     pod 'Alamofire'
     pod 'Kingfisher', '~> 7.0'
-    pod 'SnapKit'
+    pod 'SnapKit', '~> 5.6.0'
   end
+
 
 end
