--- a/iOS_201/Podfile
+++ b/iOS_201/Podfile
@@ -9,6 +9,8 @@ target 'iOS_201' do
   pod 'Alamofire'
   pod 'Kingfisher', '~> 7.0'
   pod 'SnapKit', '~> 5.6.0'
+  pod 'RxSwift', '6.6.0'
+  pod 'RxCocoa', '6.6.0'
 
   target 'iOS_201Tests' do
     inherit! :search_paths
